# alexandra_ai_data

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  docs.yaml
src/alexandra_ai_data/: __init__.py  config_domsdatabasen.py  cvr.py  cvr_api.py  dmi.py  dmi_api.py  domsdatabasen.py
src/scripts/: domsdatabasen_example_usage.py  fix_dot_env_file.py  your_script.py
tests/: __init__.py
